--- a/_config.yml
+++ b/_config.yml
@@ -6,20 +6,20 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-name: User MacUserino # Your name.
-email: user.userino@example.com # Your email
+name: Alex Papaioannou # Your name.
+email: a.papaioannou@columbia.edu # Your email
 
 # Use consideration when using these, publicly available contact information
 # and place of residence is not something you might want to have.
 tagline: Personal cover page for this test user. # Appears on the sidebar bellow your name.
-address: User street 123, 50123 Userville, Userlandia # Your address
-phone: 555-not-a-real-number # Your phone number
-dob: 12.12.2012 # Your date of birth
-image: http://placehold.it/350x350
-title: Awesomeness Expert # Your title eg. Writer, programmer, welder, etc.
-github_username:  foobarbizbuzhopefullynotrealuser # Your github username
-linkedin_url: https://linkedin.com/profile/sample # Your linkedin public url
-twitter_handle: # Your twitter handle
+address: 424 West 4th Street, 10022 New York, United States # Your address
+phone: 917-435-87 # Your phone number
+dob: 05.26.1992 # Your date of birth
+image: https://www.dropbox.com/s/t1u7ya0nk1z5z2i/AP_professional_photo.png?dl=0
+title: Data Scientist # Your title eg. Writer, programmer, welder, etc.
+github_username:  apapaioannou92 # Your github username
+linkedin_url: https://www.linkedin.com/in/apapaio/ # Your linkedin public url
+twitter_handle: https://twitter.com/alexpap2018 # Your twitter handle
 
 abstract: > # Here you should write a brief summary about yourself.
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam a tortor eget mi interdum dignissim. Pellentesque molestie felis vitae leo scelerisque tempus. Duis posuere mi non nisl gravida faucibus. Donec nulla lacus, sodales vel gravida id, mollis sit amet quam. Vivamus placerat aliquet est, vel egestas nulla porttitor ut. Quisque quis justo nec nisi faucibus vehicula. Sed urna nibh, placerat vel vehicula eget, laoreet sit amet lorem. Nam lectus arcu, sodales at eros et, finibus vehicula risus. Vivamus mollis congue ipsum, sit amet efficitur felis. Cras eu accumsan mi. Cras efficitur ornare sem, eget molestie lacus interdum et. Vivamus luctus neque non eros congue, ut hendrerit lorem vestibulum. Nullam erat sem, sagittis id lacinia finibus, faucibus eu libero. Vivamus in purus et nunc tempor aliquam quis vitae risus.
