--- a/_config.yml
+++ b/_config.yml
@@ -15,11 +15,11 @@ tagline: Personal cover page for this test user. # Appears on the sidebar bellow
 address: 424 West 4th Street, 10022 New York, United States # Your address
 phone: 917-435-87 # Your phone number
 dob: 05.26.1992 # Your date of birth
-image: https://www.dropbox.com/s/t1u7ya0nk1z5z2i/AP_professional_photo.png?dl=0
+image: https://images.app.goo.gl/acnf7FpuSsLgQcmEA
 title: Data Scientist # Your title eg. Writer, programmer, welder, etc.
 github_username:  apapaioannou92 # Your github username
 linkedin_url: https://www.linkedin.com/in/apapaio/ # Your linkedin public url
-twitter_handle: https://twitter.com/alexpap2018 # Your twitter handle
+twitter_handle: alexpap2018 # Your twitter handle
 
 abstract: > # Here you should write a brief summary about yourself.
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam a tortor eget mi interdum dignissim. Pellentesque molestie felis vitae leo scelerisque tempus. Duis posuere mi non nisl gravida faucibus. Donec nulla lacus, sodales vel gravida id, mollis sit amet quam. Vivamus placerat aliquet est, vel egestas nulla porttitor ut. Quisque quis justo nec nisi faucibus vehicula. Sed urna nibh, placerat vel vehicula eget, laoreet sit amet lorem. Nam lectus arcu, sodales at eros et, finibus vehicula risus. Vivamus mollis congue ipsum, sit amet efficitur felis. Cras eu accumsan mi. Cras efficitur ornare sem, eget molestie lacus interdum et. Vivamus luctus neque non eros congue, ut hendrerit lorem vestibulum. Nullam erat sem, sagittis id lacinia finibus, faucibus eu libero. Vivamus in purus et nunc tempor aliquam quis vitae risus.
