--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ tagline: Personal cover page for this test user. # Appears on the sidebar bellow
 address: 424 West 4th Street, 10022 New York, United States # Your address
 phone: 917-435-87 # Your phone number
 dob: 05.26.1992 # Your date of birth
-image: https://images.app.goo.gl/acnf7FpuSsLgQcmEA
+image: https://ibb.co/rGR0Lzc
 title: Data Scientist # Your title eg. Writer, programmer, welder, etc.
 github_username:  apapaioannou92 # Your github username
 linkedin_url: https://www.linkedin.com/in/apapaio/ # Your linkedin public url
