--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ linkedin_url: https://www.linkedin.com/in/apapaio/ # Your linkedin public url
 twitter_handle: alexpap2018 # Your twitter handle
 
 abstract: > # Here you should write a brief summary about yourself.
-Currently my work focuses on corporate workflow transformation and optimization using Process Engineering, ProjectProgram Management and LeanSix Sigma Agile Management principles. On the side, I am working as a freelancer on Data Science models that aim to enhance the efficiency of corporations and give them insights in order to formulate better decision making strategies. Currently, I am happy to work as an internal Consultant, and Program Manager for Nomura Securities. Regarding my education, I am a graduate of the program M.S. candidate in Management Science and Engineering of Columbia’s  Business School and Engineering School (2019). Lastly, I hold as well a MEng in Civil and Environmental Engineering (2017). Favorite programming languages Python, R, SQL, Matlab, CC++, Fortran 90, Java. If you need any further information, please feel free to contact me. Thank you for your time! Email address a.papaioannou@columbia.edu
+Currently my work focuses on corporate workflow transformation and optimization using Process Engineeringioannou@columbia.edu
 description: > # Description for site meta, used by search engines.
   Personal cover page for this test user.
 theme: theme-greyscale # Color theme for the site.
