--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,16 @@ linkedin_url: https://www.linkedin.com/in/apapaio/ # Your linkedin public url
 twitter_handle: alexpap2018 # Your twitter handle
 
 abstract: > # Here you should write a brief summary about yourself.
-  Currently my work focuses on corporate workflow transformation and optimization using Process Engineeringioannou@columbia.edu
+  Currently my work focuses on corporate workflow transformation and optimization using Process Engineering, Project/Program Management and Lean/Six Sigma/Agile Management principles. 
+  
+  On the side, I am working as a freelancer on Data Science models that aim to enhance the efficiency of corporations and give them insights in order to formulate better decision making strategies.
+  
+  Currently, I am happy to work as an internal Consultant, and Program Manager for Nomura Securities.
+  
+  Regarding my education, I am a graduate of the program M.S. candidate in Management Science & Engineering of Columbia’s  Business School and Engineering School (2019). Lastly, I hold as well a MEng in Civil and Environmental Engineering (2017). 
+
 description: > # Description for site meta, used by search engines.
-  Personal cover page for this test user.
+  #Personal cover page for this test user.
 theme: theme-default-blue # Color theme for the site.
 
 # Localization
