--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ I hold a M.S. Operations Research from Columbia University (2019) and a B.S. in 
 
 If you need any further information, please feel free to contact me by email at a.papaioannou@columbia.edu
 
-core characteristics:
+core characteristics:-
 -meticulous and detail/exception oriented
 -professional experience in 2 fast paced IBs+fintech startup
 -hands-on experience in finance (both front office and middle office functions), project management, data science, DevOps, systems, machine learning, time series analysis, PROD automation using Python, Gitlab, AWS, Kafka, Spark, Docker, Kubernetes, SQL
