--- a/_config.yml
+++ b/_config.yml
@@ -36,12 +36,12 @@ I hold a M.S. Operations Research from Columbia University (2019) and a B.S. in 
 
 If you need any further information, please feel free to contact me by email at a.papaioannou@columbia.edu
 
-core characteristics:-
--meticulous and detail/exception oriented
--professional experience in 2 fast paced IBs+fintech startup
--hands-on experience in finance (both front office and middle office functions), project management, data science, DevOps, systems, machine learning, time series analysis, PROD automation using Python, Gitlab, AWS, Kafka, Spark, Docker, Kubernetes, SQL
--bachelors and masters degrees in math and engineering and 4+ years of research in engineering and financial mathematics
--professionally mature, adaptable and able to change priorities quickly and work on multiple projects concurrently when roadblocks/dependencies come up
+#core characteristics:
+#-meticulous and detail/exception oriented
+#-professional experience in 2 fast paced IBs+fintech startup
+#-hands-on experience in finance (both front office and middle office functions), project management, data science, DevOps, systems, machine learning, time series analysis, PROD automation using Python, Gitlab, AWS, Kafka, Spark, Docker, Kubernetes, SQL
+#-bachelors and masters degrees in math and engineering and 4+ years of research in engineering and financial mathematics
+#-professionally mature, adaptable and able to change priorities quickly and work on multiple projects concurrently when roadblocks/dependencies come up
 
 description: > # Description for site meta, used by search engines.
   #Personal cover page for this test user.
