--- a/_config.yml
+++ b/_config.yml
@@ -45,8 +45,7 @@ abstract: > # Here you should write a brief summary about yourself.
 
 description: > # Description for site meta, used by search engines.
   #Personal cover page for this test user.
-theme: jekyll-theme-hydejack
-remote_theme: hydecorp/hydejack@v9.0.4
+# theme: jekyll-theme-hydejack
 # remote_theme: theme-default-blue # Color theme for the site.
 
 # Localization
