--- a/_config.yml
+++ b/_config.yml
@@ -72,12 +72,12 @@ plugins:
   
 sass:
     sass_dir: _sass
-Welcome to Jekyll!
+# Welcome to Jekyll!
 
-This config file is meant for settings that affect your whole blog, values
-which you are expected to set up once and rarely need to edit after that.
-For technical reasons, this file is *NOT* reloaded automatically when you use
-'jekyll serve'. If you change this file, please restart the server process.
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely need to edit after that.
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'jekyll serve'. If you change this file, please restart the server process.
 
 # # Site settings
 # name: Alex Papaioannou # Your name.
