--- a/_config.yml
+++ b/_config.yml
@@ -75,8 +75,12 @@ markdown: kramdown
 plugins:
   - jekyll-image-size
   
+# sass:
+#     sass_dir: _sass
 sass:
-    sass_dir: _sass
+    load_paths:
+        - _sass
+        - css
 # Welcome to Jekyll!
 
 # This config file is meant for settings that affect your whole blog, values
