--- a/_config.yml
+++ b/_config.yml
@@ -62,8 +62,8 @@ phone_text: Phone
 dob_text: Date of birth
 address_text: Address
 
-baseurl: ""
-<link rel="stylesheet" href="{{ "css/main.css, " | prepend: site.baseurl }}">
+# baseurl: ""
+# <link rel="stylesheet" href="{{ "css/main.css, " | prepend: site.baseurl }}">
 # <link rel="stylesheet" href="{{ site.baseurl }}/css/css.css">
 # <script src="{{ site.baseurl }}/js/scripts.js"></script>
 # <img src="{{ site.baseurl }}/path/to/img/toto.jpg">
