--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ tagline: Personal cover page for job description, skills, personal projects, edu
 address: 424 West 47th Street, 10036 New York, United States # Your address
 phone: 917-435-8702 # Your phone number
 dob: 05.26.1992 # Your date of birth
-image: '/assets/images/AP_professional_photo_squared.jpg'
+image: 'home/assets/images/AP_professional_photo_squared.jpg'
 title: Data Scientist # Your title eg. Writer, programmer, welder, etc.
 github_username:  alex-papaioannou # Your github username
 linkedin_url: https://www.linkedin.com/in/apapaio/ # Your linkedin public url
@@ -65,9 +65,9 @@ phone_text: Phone
 dob_text: Date of birth
 address_text: Address
 
-# <link rel="stylesheet" href="{{ "css/main.css, " | prepend: site.baseurl }}">
+<link rel="stylesheet" href="{{ "css/main.css, " | prepend: site.baseurl }}">
 # <link rel="stylesheet" href="{{ site.baseurl }}home/css/main.css">
-<link rel="stylesheet" href="/css/main.css">
+# <link rel="stylesheet" href="/css/main.css">
 # <script src="{{ site.baseurl }}/js/scripts.js"></script>
 # <img src="{{ site.baseurl }}/path/to/img/toto.jpg">
 # <a href="{{ site.baseurl }}/linkto/">Link</a>
