--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,8 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'jekyll serve'. If you change this file, please restart the server process.
 
-baseurl: /
+# baseurl: /
+# root: /
 url: https://alex-papaioannou.github.io
 
 # Site settings
