--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,8 @@ tagline: Personal cover page for job description, skills, personal projects, edu
 address: 424 West 47th Street, 10036 New York, United States # Your address
 phone: 917-435-8702 # Your phone number
 dob: 05.26.1992 # Your date of birth
-image: 'https://alex-papaioannou.github.io/home/assets/images/AP_professional_photo_squared.jpg'
+image: <img src="assets/images/AP_professional_photo_squared.jpg" class="img-responsive" alt="">
+
 title: Data Scientist # Your title eg. Writer, programmer, welder, etc.
 github_username:  alex-papaioannou # Your github username
 linkedin_url: https://www.linkedin.com/in/apapaio/ # Your linkedin public url
