--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # baseurl: /
 # root: /
-url: https://alex-papaioannou.github.io
+url: https://alex-papaioannou.github.io/home
 # permalink: "/blog/:title/"
 
 # Site settings
