--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ tagline: Personal cover page for job description, skills, personal projects, edu
 address: 424 West 47th Street, 10036 New York, United States # Your address
 phone: 917-435-8702 # Your phone number
 dob: 05.26.1992 # Your date of birth
-image: <img src="home/assets/images/AP_professional_photo_squared.jpg" class="img-responsive" alt="">
+image: <img src="https://alex-papaioannou.github.io/assets/images/AP_professional_photo_squared.jpg" class="img-responsive" alt="">
 
 title: Data Scientist # Your title eg. Writer, programmer, welder, etc.
 github_username:  alex-papaioannou # Your github username
