--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,8 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'jekyll serve'. If you change this file, please restart the server process.
 
-# baseurl: /
-# root: /
-url: https://alex-papaioannou.github.io/home
+baseurl: https://alex-papaioannou.github.io
+root: home
 # permalink: "/blog/:title/"
 
 # Site settings
