--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # baseurl: https://alex-papaioannou.github.io/home
-baseurl: "/home"
+# baseurl: "/home"
 # root: home/
 # permalink: "/blog/:title/"
 
