--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ description: > # Description for site meta, used by search engines.
 # theme: jekyll-theme-hydejack
 # remote_theme: theme-default-blue # Color theme for the site.
 # theme: theme-default-blue # Color theme for the site.
-remote_theme: theme-default-blue #ngzhio/jekyll-theme-hamilton
+remote_theme: jekyll-theme-default-blue #theme-default-blue #ngzhio/jekyll-theme-hamilton
 # Localization
 projects: Personal projects
 skills: Skills
